hphp/hack/test/typecheck/readonly/constfuns.php.exp
File "constfuns.php", line 25, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
File "constfuns.php", line 30, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
File "constfuns.php", line 40, characters 23-24:
Invalid argument (Typing[4411])
  File "constfuns.php", line 34, characters 8-70:
  Function readonly mismatch
  File "constfuns.php", line 34, characters 8-70:
  This function is not marked readonly
  File "constfuns.php", line 15, characters 33-65:
  This function is marked readonly
